# SDLPlayground

./: .gitignore  README.md  main.cpp
cmake/: CMakeLists.txt  build.sh  build_debug.sh
includes/: Common.hpp  Entity.hpp  Game.hpp  Math.hpp
src/: Entity.cpp  Game.cpp  Math.cpp  main.cpp
